# colorcoded

./: .gitignore  CMakeLists.txt  main.cpp
code/: rgb.shader
